# Systeme_Gestion_Notes

./: CMakeLists.txt  main.cpp  énoncé.txt
include/: Etudiant.h  Note.h
src/: Etudiant.cpp  Main.cpp  Note.cpp
